[package]
name = "cargo-docs-rs"
version = "0.1.6"
authors = ["David Tolnay <dtolnay@gmail.com>"]
categories = ["development-tools::cargo-plugins"]
description = "Imitate the documentation build that docs.rs would do"
edition = "2021"
keywords = ["cargo", "subcommand", "docs-rs", "documentation"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/dtolnay/cargo-docs-rs"

[features]
default = ["accessory"]
accessory = ["dep:tera", "dep:walkdir", "dep:chrono", "dep:font-awesome-as-a-crate", "dep:thiserror", "dep:syntect", "dep:once_cell", "dep:tracing", "dep:log", "dep:path-slash", "dep:grass", "dep:percent-encoding"]

[dependencies]
anyhow = "1"
cargo-subcommand-metadata = "0.1"
clap = { version = "4.4.7", features = ["deprecated", "derive"] }
serde = "1"
serde_derive = "1"
serde_json = "1"
toml = "0.8"

# The following are only used by the accessory feature.
tera = { version = "1.5.0", features = ["builtins"], optional = true }
walkdir = { version = "2", optional = true }
chrono = { version = "0.4.11", default-features = false, features = ["clock", "serde"], optional = true }
font-awesome-as-a-crate = { version = "0.3.0", optional = true }
thiserror = { version = "1.0.50", optional = true }
syntect = { version = "5.0.0", default-features = false, features = ["parsing", "html", "dump-load", "regex-onig"], optional = true }
once_cell = { version = "1.4.0", features = ["parking_lot"], optional = true }
tracing = { version = "0.1.37", optional = true }
log = { version = "0.4", optional = true }
percent-encoding = { version = "2", optional = true }

[build-dependencies]
anyhow = { version = "1", features = ["backtrace"] }
cfg-if = "1"

# The following are only used by the accessory feature.
walkdir = { version = "2", optional = true }
path-slash = { version = "0.2", optional = true }
once_cell = { version = "1.4", features = ["parking_lot"], optional = true }
grass = { version = "0.13", default-features = false, optional = true }
syntect = { version = "5", default-features = false, features = ["parsing", "dump-create", "yaml-load", "regex-onig"], optional = true }

[package.metadata.docs.rs]
default-target = "x86_64-unknown-linux-gnu"
default-features = false
targets = [
  "x86_64-unknown-linux-gnu",
  "x86_64-apple-darwin",
  "x86_64-pc-windows-msvc",
]
