[package]
name = "cargo-docs-rs"
version = "0.1.6"
authors = ["David Tolnay <dtolnay@gmail.com>"]
categories = ["development-tools::cargo-plugins"]
description = "Imitate the documentation build that docs.rs would do"
edition = "2021"
keywords = ["cargo", "subcommand", "docs-rs", "documentation"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/dtolnay/cargo-docs-rs"

[features]
default = ["accessory"]
accessory = ["dep:tera","dep:walkdir", "dep:chrono", "dep:font-awesome-as-a-crate", "dep:thiserror", "dep:syntect", "dep:once_cell", "dep:env_logger", "dep:log", "dep:path-slash", "dep:grass", "dep:percent-encoding", "dep:getrandom", "dep:url", "dep:crates-index-diff", "dep:crates-index", "dep:prometheus", "dep:reqwest", "dep:time", "dep:gix", "dep:semver", "dep:tokio", "dep:mime_guess", "dep:cargo_metadata", "dep:base64", "dep:regex", "dep:comrak"]

[dependencies]
anyhow = "1"
cargo-subcommand-metadata = "0.1"
clap = { version = "4.4.7", features = ["deprecated", "derive"] }
serde = "1"
serde_derive = "1"
serde_json = "1"
toml = "0.8"

# The following are only used by the accessory feature.
tera = { version = "1.5.0", features = ["builtins"], optional = true }
walkdir = { version = "2", optional = true }
chrono = { version = "0.4.11", default-features = false, features = ["clock", "serde"], optional = true }
font-awesome-as-a-crate = { version = "0.3.0", optional = true }
thiserror = { version = "1.0.50", optional = true }
syntect = { version = "5.0.0", default-features = false, features = ["parsing", "html", "dump-load", "regex-onig"], optional = true }
once_cell = { version = "1.4.0", features = ["parking_lot"], optional = true }
env_logger = { version = "0.10", optional = true }
log = { version = "0.4", optional = true }
percent-encoding = { version = "2", optional = true }
getrandom = { version = "0.2.11", optional = true }
url = { version = "2.5.0", optional = true}
crates-index-diff = { version = "21.0.0", features = [ "max-performance" ], optional = true}
crates-index = { version = "2.2.0", default-features = false, features = ["git", "git-performance", "parallel"], optional = true }
prometheus = { version = "0.13", default-features = false, optional = true }
reqwest = { version = "0.11", features = ["blocking", "json"], optional = true }
semver = { version = "1.0.4", features = ["serde"], optional = true }
tokio = { version = "1.0", features = ["rt-multi-thread", "signal", "macros"], optional = true }
mime_guess = { version = "2", optional = true }
cargo_metadata = { version = "0.18.1", optional = true }
base64 = { version = "0.21", optional = true }
regex = { version = "1", optional = true }
comrak = { version = "0.20.0", default-features = false, optional = true }

[build-dependencies]
anyhow = { version = "1", features = ["backtrace"] }
cfg-if = "1"

# The following are only used by the accessory feature.
walkdir = { version = "2", optional = true }
path-slash = { version = "0.2", optional = true }
once_cell = { version = "1.4", features = ["parking_lot"], optional = true }
grass = { version = "0.13", default-features = false, optional = true }
syntect = { version = "5", default-features = false, features = ["parsing", "dump-create", "yaml-load", "regex-onig"], optional = true }
time = { version = "0.3", optional = true }
gix = { version = "0.56", default-features = false, optional = true }
