[package]
name = "cargo-docs-rs"
version = "0.1.10"
authors = ["David Tolnay <dtolnay@gmail.com>"]
categories = ["development-tools::cargo-plugins"]
description = "Imitate the documentation build that docs.rs would do"
edition = "2021"
keywords = ["cargo", "subcommand", "docs-rs", "documentation"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/dtolnay/cargo-docs-rs"

[dependencies]
anyhow = "1.0.79"
cargo-subcommand-metadata = "0.1"
clap = { version = "4", features = ["deprecated", "derive"] }
serde = "1.0.194"
serde_derive = "1.0.194"
serde_json = "1.0.110"
serde_path_to_error = "0.1"
shlex = "1.3"
termcolor = "1.4"
toml = "0.8"
